# packmol_memgen_minimal

./: .gitignore  COPYRIGHT  LICENSE  MANIFEST.in  README.rst  packmol-memgen  pyproject.toml
.github/workflows/: publish-pypi.yml  tag-release.yml
packmol_memgen/: __init__.py  __version__.py  main.py
packmol_memgen/data/: insane_lipids.txt  insane_solvents.txt  memgen.parm
packmol_memgen/example/: example.sh
packmol_memgen/lib/: amber.py  utils.py
packmol_memgen/lib/charmmlipid2amber/: charmmlipid2amber.py
packmol_memgen/lib/pdbremix/: v3numpy.py
scripts/: check_packmol_serials.py
